# german-impressum-extractor

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-02-confidence-scoring.md  2026-07-02-foundation-normalize-segment.md  2026-07-02-multi-address.md  2026-07-02-new-fields.md  2026-07-02-precision-hardening.md  2026-07-02-regex-precision.md  2026-07-02-scored-tp5-parity.md
docs/superpowers/specs/: 2026-07-02-confidence-scoring-design.md  2026-07-02-foundation-normalize-segment-design.md  2026-07-02-multi-address-design.md  2026-07-02-new-fields-design.md  2026-07-02-precision-hardening-design.md  2026-07-02-regex-precision-design.md  2026-07-02-scored-tp5-parity-design.md
examples/: basic.rs
src/: candidate.rs  html.rs  lib.rs  normalize.rs  score.rs  scored.rs  segment.rs
tests/: foundation.rs  hardening.rs  multi_address.rs  new_fields.rs  regressions.rs  scoring.rs
