[package]
name = "german-impressum-extractor"
version = "0.1.0"
edition = "2024"
authors = ["Lionel Machire <lionel.machire@googlemail.com>"]
description = "Extract structured data from German B2B website Impressum text — email, phone, address, HR-Nummer, USt-IdNr., Geschäftsführer names, legal form, and more. Pure-Rust, no async."
documentation = "https://github.com/Liohtml/german-impressum-extractor#readme"
repository = "https://github.com/Liohtml/german-impressum-extractor"
homepage = "https://github.com/Liohtml/german-impressum-extractor"
readme = "README.md"
keywords = ["impressum", "scraper", "germany", "b2b", "extraction"]
categories = ["parser-implementations", "text-processing"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[dependencies]
regex = "1.10"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
html5gum = { version = "0.8", default-features = false, optional = true }

[features]
default = []
serde = ["dep:serde"]
html = ["dep:html5gum"]

[dev-dependencies]
serde_json = "1"
